js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2b.1.kt
fun funB() = listOf(fun2(), fun1()).joinToString()
